Añadiendole funcionalidad a los filtros

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 </h4>
               </div>
               <div class="panel-collapse collapse" id="universe-selector">
-                <div class="panel-body">Marvel Cinematic Universe</div>
-                <div class="panel-body">X-Men: Film Series</div>
+                <div class="panel-body" id="mcu-movies">Marvel Cinematic Universe</div>
+                <div class="panel-body" id="fox-movies">X-Men: Film Series</div>
               </div>
             </div>
             <!-- Seleccionar por status de película -->
@@ -91,8 +91,8 @@
                 </h4>
               </div>
               <div class="panel-collapse collapse" id="ranking-selector">
-                <div class="panel-body">Best Movies</div>
-                <div class="panel-body">Worst Movies</div>
+                <div class="panel-body" id="best-movies">Best Movies</div>
+                <div class="panel-body" id="worst-movies">Worst Movies</div>
               </div>
             </div>
             <!-- Seleccionar por Género -->
@@ -103,13 +103,13 @@
                 </h4>
               </div>
               <div class="panel-collapse collapse" id="genre-selector">
-                <div class="panel-body">Action</div>
-                <div class="panel-body">Adventure</div>
-                <div class="panel-body">Comedy</div>
-                <div class="panel-body">Drama</div>
-                <div class="panel-body">Fantasy</div>
-                <div class="panel-body">Romance</div>
-                <div class="panel-body">Sci-Fi</div>
+                <div class="panel-body" id="action-movies">Action</div>
+                <div class="panel-body" id="adventure-movies">Adventure</div>
+                <div class="panel-body" id="comedy-movies">Comedy</div>
+                <div class="panel-body" id="drama-movies">Drama</div>
+                <div class="panel-body" id="fantasy-movies">Fantasy</div>
+                <div class="panel-body" id="romance-movies">Romance</div>
+                <div class="panel-body" id="scifi-movies">Sci-Fi</div>
               </div>
             </div>
           </div>
