--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
           </div>
         </div>
       </div>
+      <a class="carousel-control-prev" href="#coming-soon-slider" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#coming-soon-slider" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
     <!-- Fila de contenido principal -->
